# cando-rs

./: .gitignore  .vibe-vault.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: release.yml
cando-can-monitor/: Cargo.toml
cando-can-monitor/src/: decoder.rs  dispatcher.rs  error.rs  lib.rs  reader.rs  replay.rs  types.rs
cando-cfg/: Cargo.toml
cando-cfg/src/: lib.rs  main.rs
cando-codegen/: Cargo.toml
cando-codegen/src/: encoder.rs  field_name_converter.rs  generator.rs  main.rs
cando-config/: Cargo.toml
cando-config/src/: config.rs  error.rs  lib.rs  loader.rs  validator.rs
cando-core/: Cargo.toml
cando-core/src/: device_id.rs  field_name_converter.rs  lib.rs
cando-dump/: Cargo.toml
cando-dump-messages/: Cargo.toml
cando-dump-messages/src/: lib.rs  main.rs
cando-dump/src/: dumper.rs  filter.rs  formatter.rs  main.rs  timestamp.rs
cando-j1939-sim/: Cargo.toml
cando-j1939-sim/benches/: physics_bench.rs
cando-j1939-sim/src/: lib.rs  main.rs
cando-j1939-sim/src/broadcasts/: aftertreatment.rs  braking.rs  crash.rs  dcdc.rs  diagnostics.rs  engine.rs  ev_charging.rs  hvess.rs  mod.rs  motor.rs  power_supply.rs  sensors.rs  thermal.rs  transmission.rs  vehicle.rs
cando-j1939-sim/src/handlers/: aftertreatment.rs  braking.rs  crash.rs  dcdc.rs  diagnostics.rs  engine.rs  ev_charging.rs  hvess.rs  mod.rs  motor.rs  power_supply.rs  sensors.rs  thermal.rs  transmission.rs  vehicle.rs
cando-j1939-sim/src/physics/: dcdc.rs  engine.rs  ev_charging.rs  hvess.rs  mod.rs  motor.rs  transmission.rs  vehicle.rs
cando-j1939-sim/src/state/: aftertreatment.rs  braking.rs  crash.rs  dcdc.rs  diagnostics.rs  engine.rs  ev_charging.rs  hvess.rs  mod.rs  motor.rs  power_supply.rs  sensors.rs  thermal.rs  transmission.rs  vehicle.rs
cando-j1939-sim/tests/: integration_test.rs  test_aftertreatment_batch11.rs  test_aftertreatment_batch6.rs  test_braking_batch5.rs  test_diagnostics_batch10.rs  test_engine_batch1.rs  test_ev_charging_batch12.rs  test_hvess_batch7.rs  test_motor_batch8.rs  test_power_batch9.rs  test_sensors_batch3.rs  test_transmission_batch2.rs  test_vehicle_batch4.rs
cando-log-analyzer/: Cargo.toml
cando-log-analyzer/src/: lib.rs  main.rs
cando-messages/: Cargo.toml  build.rs
cando-messages/benches/: encoder_bench.rs
cando-messages/src/: common.rs  encoder.rs  encoder.rs.tmp.1061399.1773447814220  lib.rs  metadata.rs
cando-messages/src/j1939/: mod.rs
cando-messages/src/j1939/braking_safety/: mod.rs
cando-messages/src/j1939/diagnostics/: command_helpers.rs  dm03_helpers.rs  dtc_helpers.rs  dtc_impls.rs  mod.rs
cando-messages/src/j1939/engine_control/: mod.rs
cando-messages/src/j1939/power_management/: mod.rs
cando-messages/src/j1939/sensors/: mod.rs
cando-messages/tests/: proptest_roundtrip.rs
cando-meta/: Cargo.toml
cando-meta/src/: lib.rs
cando-monitor/: Cargo.toml
cando-monitor/src/: lib.rs  main.rs
cando-send/: Cargo.toml
cando-send/src/: frame.rs  lib.rs  main.rs  parser.rs  replay.rs  sender.rs
cando-simulator-common/: Cargo.toml
cando-simulator-common/src/: can_frame.rs  can_socket.rs  cli.rs  device_id.rs  error.rs  lib.rs  message_filter.rs  message_tracking.rs  physics.rs  websocket.rs
cando-util/: Cargo.toml
cando-util/src/: encoder.rs  main.rs
cando-util/src/builder/: data.rs  j1939_builder.rs  mod.rs  screens.rs  tui.rs
cando-ws-query/: Cargo.toml
cando-ws-query/src/: lib.rs  main.rs
doc/: architecture-can-util.md  architecture-message-builder.md  architecture-multiplexer-encoding.md  architecture-network-gateway-options.md  architecture-webui-routing.md  build-arm64-cross-compilation.md  build-cap-net-raw-impl.md  build-cross-compilation-design.md  build-cross-compilation-guide.md  build-debian-capabilities.md  build-debian-install.md  build-debian-packaging.md  build-system.md  guide-add-j1939-messages.md  guide-ai-add-j1939-73-diags.md  guide-ai-add-j1939-messages.md  guide-ai-critical-reminders.md  guide-ai-project-standards.md  guide-ai-workflow.md  guide-clipboard-osc52.md  guide-codegen-quick-ref.md  guide-command-builder-tui.md  guide-configuration-reference.md  guide-doc-organization.md  guide-field-name-conversion.md  guide-man-pages.md  guide-scripts-reference.md  guide-socketcan-setup.md  license-summary.md  license-third-party.txt  porting-binary-mapping.md  porting-decisions.md  simulator-j1939.md  simulator-overview.md  spec-can-bus-multi-device.md  spec-j1939-expansion-status.md  spec-j1939-field-name-migration.md  spec-j1939-pdu1-vs-pdu2.md  testing-code-coverage.md  testing-integration-framework.md  (+4 more)
man/: cando_cfg.1  cando_codegen.1  cando_dump.1  cando_dump_messages.1  cando_j1939_sim.1  cando_log_analyzer.1  cando_monitor.1  cando_send.1  cando_util.1
scripts/: generate-man.sh  run-with-nvm.sh  set_can_privileges.sh
scripts/dev-tools/: detect_codegen_change.sh
scripts/integration/: integration_test_all_protocols.sh  validate_all_protocols.sh  validate_dump_messages.sh
scripts/packaging/: generate-completions.sh
scripts/testing/: test_playwright_webui.sh
