[package]
name = "cando-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for CAN-Do DBC files"

[[bin]]
name = "cando-codegen"
path = "src/main.rs"

[dependencies]
cando-core.workspace = true
clap.workspace = true
anyhow.workspace = true
can-dbc.workspace = true
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
clap_mangen = { workspace = true, optional = true }
[features]
manpages = ["clap_mangen"]
